<resources>
    <string name="app_name">Twidy</string>
    <string name="title_recommends">Главная</string>
    <string name="title_chats">Чаты</string>
    <string name="title_calls">Звонки</string>
    <string name="title_settings">Настройки</string>

    <!--ERRORS-->
    <string name="host_error">Ошибка подключения к хосту</string>
    <string name="static_data_error">Ошибка получения статичных данных. Проверьте подключение к интернету</string>
    <string name="location_error">Ошибка получения местоположения. Проверьте подключение к интернету</string>
    <string name="auth_error">Ошибка авторизации. Проверьте подключение к интернету</string>
    <string name="chats_error">Ошибка получения чатов</string>
    <string name="favorite_error">Ошибка получения избранных пользователей</string>
    <string name="archive_error">Ошибка архивирования</string>
    <string name="no_internet">Нет подключения к интернету</string>
    <string name="decrypt_error">Ошибка дешифрования</string>

    <!--START SLIDES-->
    <string name="skip_slide">Skip</string>
    <string name="first_slide_desc">Простой способ связаться \nс блогерами, \nмедиа-звездами \nи экспертами.</string>
    <string name="second_slide_title">Общайтесь \nс кумирами</string>
    <string name="second_slide_desc">Задавайте вопросы \nпрофессионалам, блогерам, \nзвездам, спортсменам.\n
        \nПросто отправьте платное \nсообщение и получите \nбыстрый и подробный ответ \nна Ваш вопрос.</string>
    <string name="third_slide_title">Получайте \nуникальные \nвидео</string>
    <string name="third_slide_desc">Вы можете заказать \nперсонализированные \nвидео-ролики \nот своих
        любимых \nзнаменитостей, спортсменов \nили влиятельных лиц.</string>
    <string name="fourth_slide_title">Зарабатывайте</string>
    <string name="fourth_slide_desc">Установите стоимость \nконтакта с вами и получайте \nденьги за каждый ответ.\n
        \nВедите платные каналы, \nделитесь уникальным \nконтентом и зарабатывайте.</string>



    <string name="title_authorization">Авторизация</string>
    <string name="check_country_code">Проверьте код страны \nи введите свой номер телефона</string>
    <string name="phone_number_hint">Номер телефона</string>
    <string name="get_code">Получить код проверки</string>
    <string name="checkcode">Код проверки</string>
    <string name="we_sent_code">Мы отправили код проверки \nна указанный Вами номер телефон</string>
    <string name="incorrect_number_question">Неверный номер телефона? <font color="#615dfa">Введите правильный</font></string>
    <string name="repeat_number">Повторная отправка возможна через %1$d секунд.</string>
    <string name="next">Далее</string>
    <string name="check_all">Выбрать все</string>
    <string name="all">Чат</string>
    <string name="video">Видео</string>
    <string name="audio">Аудио</string>
    <string name="edit">Изм.</string>
    <string name="archive">В архив</string>
    <string name="write">Написать</string>
    <string name="cancel">Отмена</string>
    <string name="choose_chats">Выберите чаты</string>

</resources>
