<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_recommendations">

    <fragment
        android:id="@+id/navigation_recommendations"
        android:name="com.example.twidy.recommendations.RecommendationsFragment"
        android:label="@string/title_recommends"
        tools:layout="@layout/fragment_recommendations" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.twidy.chats.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_calls"
        android:name="com.example.twidy.calls.CallsFragment"
        android:label="@string/title_calls"
        tools:layout="@layout/fragment_calls" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.twidy.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>