<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="chats"
            type="com.example.twidy.ui.chats.ChatsViewModel" />
    </data>
    <LinearLayout
        android:id="@+id/layout_popup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorBackground"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="4"
                android:fontFamily="@font/sfprodisplay_semibold"
                android:gravity="start"
                android:text="@string/write"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/auth_next_button"
                android:fontFamily="@font/sfprodisplay_regular"
                android:onClick="@{() -> chats.closePopup()}"
                android:text="@string/cancel"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textColor="@color/colorButton"
                android:textSize="17sp" />

        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/chat_button_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all"
                android:onClick="@{() -> chats.fetchFavorites(`all`)}"/>

            <Button
                android:id="@+id/video_button_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/video"
                android:onClick="@{() -> chats.fetchFavorites(`video`)}"/>

            <Button
                android:id="@+id/audio_button_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/audio"
                android:onClick="@{() -> chats.fetchFavorites(`audio`)}"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>